<resources>
    <string name="app_name">City Flow</string>

    <string name="tile_filename">tile_%1$d_%2$d</string>
    <string name="icon_play">&#xe800;</string>
    <string name="icon_edit">&#xe801;</string>
    <string name="icon_next">&#xe802;</string>
    <string name="icon_rotate">&#xe803;</string>
    <string name="icon_restart">&#xe804;</string>
    <string name="icon_cross">&#xe805;</string>
    <string name="icon_pause">&#xe806;</string>
    <string name="icon_zoomin">&#xe807;</string>
    <string name="icon_zoomout">&#xe808;</string>
    <string name="icon_save">&#xe809;</string>
    <string name="icon_picktile">&#xe80a;</string>
    <string name="icon_settings">&#xe80b;</string>
    <string name="icon_quests">&#xe80c;</string>
    <string name="icon_shop">&#xe80d;</string>
    <string name="icon_shuffle">&#xe80e;</string>
    <string name="icon_add">&#xe80f;</string>
    <string name="icon_camera">&#xe810;</string>
    <string name="icon_gallery">&#xe811;</string>
    <string name="icon_tick">&#xe812;</string>
    <string name="icon_lock">&#xe813;</string>
    <string name="icon_unlock">&#xe814;</string>
    <string name="icon_text">&#xe815;</string>
    <string name="icon_ellipsis">&#xe816;</string>
    <string name="icon_delete">&#xe817;</string>
    <string name="icon_copy">&#xe818;</string>
    <string name="icon_export">&#xe819;</string>
    <string name="icon_time">&#xe81A;</string>
    <string name="icon_centre">&#xe81B;</string>
    <string name="icon_buy_currency">&#xe81C;</string>
    <string name="icon_star_filled">&#xe81D;</string>
    <string name="icon_star_unfilled">&#xe81E;</string>
    <string name="icon_visibility">&#xe81F;</string>

    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_message">If you\'re enjoying City Flow, would you mind leaving a rating? It really helps the game out, and lets me know all the development hours were worth it! Thanks!</string>
    <string name="rate_dialog_no">No! >:(</string>
    <string name="rate_dialog_ok">Okay! :)</string>
    <string name="rate_dialog_title">Leave a rating</string>
</resources>
