<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".main.CreatorActivity">

    <LinearLayout
        android:id="@+id/topTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <uk.co.jakelee.cityflow.components.TextViewFont
            android:id="@+id/myPuzzles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:onClick="changeTab"
            android:tag="displayOwn"
            android:background="@color/ltltgrey"/>
        <uk.co.jakelee.cityflow.components.TextViewFont
            android:id="@+id/othersPuzzles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:onClick="changeTab"
            android:tag="displayImported"
            android:background="@color/ltltgrey"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topTabs">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_margin="7dp"
            android:background="@color/city">
            <LinearLayout
                android:id="@+id/puzzleContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/importPuzzle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/ltltgrey"
                    android:onClick="importFromCamera"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_margin="3dp">
                    <uk.co.jakelee.cityflow.components.AutofitTextViewFont
                        android:id="@+id/importFromCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:gravity="center_horizontal"
                        android:textSize="20sp" />
                    <uk.co.jakelee.cityflow.components.TextAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:gravity="center_horizontal"
                        android:textSize="23sp"
                        android:text="@string/icon_camera"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/ltltgrey"
                    android:onClick="importFromFile"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_margin="3dp">
                    <uk.co.jakelee.cityflow.components.AutofitTextViewFont
                        android:id="@+id/importFromFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:gravity="center_horizontal"
                        android:textSize="20sp"/>
                    <uk.co.jakelee.cityflow.components.TextAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:gravity="center_horizontal"
                        android:textSize="23sp"
                        android:text="@string/icon_gallery"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/ltltgrey"
                    android:onClick="importFromText"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_margin="3dp">
                    <uk.co.jakelee.cityflow.components.AutofitTextViewFont
                        android:id="@+id/importFromText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:gravity="center_horizontal"
                        android:textSize="20sp"/>
                    <uk.co.jakelee.cityflow.components.TextAwesome
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:gravity="center_horizontal"
                        android:textSize="23sp"
                        android:text="@string/icon_text"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/newPuzzleWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ltltgrey"
                android:onClick="newPuzzle"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <uk.co.jakelee.cityflow.components.TextViewFont
                    android:id="@+id/newPuzzle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:textSize="26sp"/>
                <uk.co.jakelee.cityflow.components.TextAwesome
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:textSize="23sp"
                    android:text="@string/icon_add"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/croutonview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>