<?xml version="1.0" encoding="utf-8"?>

<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.CustomInfoActivity">
    <TableLayout
        android:id="@+id/popupWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        android:padding="10dp"
        android:background="@color/city"
        android:layout_centerInParent="true"
        android:shrinkColumns="1"
        android:stretchColumns="1">
        <TableRow
            android:onClick="editPuzzleName">
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:paddingRight="35dp"
                android:textSize="20sp"
                android:maxLines="2"
                android:ellipsize="end"/>
        </TableRow>
        <TableRow
            android:onClick="editPuzzleDesc">
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleDescText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:paddingRight="35dp"
                android:textSize="20sp"
                android:maxLines="2"
                android:ellipsize="end"/>
        </TableRow>
        <TableRow>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleAuthorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:ellipsize="end"/>
        </TableRow>
        <TableRow>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleCreatedDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleCreatedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleBestTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleBestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleBestMovesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleBestMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/starWrapper"
            android:visibility="gone">
            <uk.co.jakelee.cityflow.components.TextViewFont
                android:id="@+id/puzzleStarsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:orientation="horizontal">
                <uk.co.jakelee.cityflow.components.TextAwesome
                    android:id="@+id/starCompletion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gold"
                    android:layout_margin="2dp"
                    android:textSize="22sp"/>
                <uk.co.jakelee.cityflow.components.TextAwesome
                    android:id="@+id/starTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gold"
                    android:layout_margin="2dp"
                    android:textSize="22sp"/>
                <uk.co.jakelee.cityflow.components.TextAwesome
                    android:id="@+id/starMoves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gold"
                    android:layout_margin="2dp"
                    android:textSize="22sp"/>
            </LinearLayout>
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <uk.co.jakelee.cityflow.components.TextAwesome
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="5dp"
                android:background="@color/ltltgrey"
                android:text="@string/icon_copy"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:gravity="center_horizontal"
                android:onClick="copyPuzzle"/>
            <uk.co.jakelee.cityflow.components.TextAwesome
                android:id="@+id/exportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="5dp"
                android:background="@color/ltltgrey"
                android:text="@string/icon_export"
                android:textColor="@color/grey"
                android:textSize="28sp"
                android:onClick="exportPuzzle"
                android:gravity="center_horizontal"/>
            <uk.co.jakelee.cityflow.components.TextAwesome
                android:id="@+id/playButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:gravity="center_horizontal"
                android:text="@string/icon_play"
                android:onClick="playPuzzle"/>
        </LinearLayout>
    </TableLayout>
    <uk.co.jakelee.cityflow.components.TextAwesome
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_cross"
        android:textColor="@color/red"
        android:layout_alignTop="@id/popupWrapper"
        android:layout_alignRight="@id/popupWrapper"
        android:textSize="30sp"
        android:onClick="closePopup"
        android:padding="10dp"
        android:layout_marginTop="-5dp"
        android:layout_marginRight="-5dp"
        android:background="@color/ltltgrey"/>
    <LinearLayout
        android:id="@+id/croutonview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>